Use proper truncation to fix mobile list style.

--- a/app/assets/stylesheets/application/reflections.scss
+++ b/app/assets/stylesheets/application/reflections.scss
@@ -31,7 +31,7 @@
   width: 90%;
 
   @include MQ(M) {
-    width: initial;
+    width: 500px;
   }
 
   .error {
